# closed-loop-stepper-motor-control

./: CMakeLists.txt  README.md  main.c  main.h
application/: user_application.c  user_application.h  user_application_messages.h
common/: system_config.c  system_config.h  system_utils.c  system_utils.h
components/ipc/: ipc.c  ipc.h
components/scheduler/: scheduler.c  scheduler.h
drivers/encoder/: encoder_drv.c  encoder_drv.h
drivers/stepper_motor/: stepper_motor_drv.c  stepper_motor_drv.h
pc_stepper_motor_commander/: ipc.py  main.py
